ori-k8s/pdf-service/k8s/ingress-dev.yaml
# ingress-dev.yaml
# Ingress configuration for grading-pdf with TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grading-pdf-ingress-dev
  namespace: grading-pdf-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/responseforwarding.flushinterval: "1ms"
    traefik.ingress.kubernetes.io/buffering.maxrequestbodybytes: "0"
    traefik.ingress.kubernetes.io/buffering.memrequestbodybytes: "0"
    traefik.ingress.kubernetes.io/request-timeout: "600s"

spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - devgradingpdf.grading.software
    secretName: grading-pdf-dev-tls
  rules:
  - host: devgradingpdf.grading.software
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grading-pdf-service-dev
            port:
              number: 80
